feat: refactor v2
